--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 </head>
 <body>
     <div class="top-container">
-        <img class="top-cloud" src="/images/cloud.png" alt="cloud-img">
+        <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
         <h1>I'm Rajkumar</h1>
         <h2 class="title">a Web Developer</h2>  
-        <img class="bottom-cloud" src="/images/cloud.png" alt="cloud-img">
+        <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
         <img src="/images/mountain.png" alt="mountain-img">
 
     </div>
     <div class="middle-container">
         <div class="profile">
-          <img class="myimage" src="/images/photo.jpg" alt="Raj">
+          <img class="myimage" src="images/photo.jpg" alt="Raj">
           <h2>Hello.</h2>
           <p class="intro">My name is Rajkumar pruthi amnd i am web Developer. I love Playing cricket and photo editing</p>
         </div>
@@ -27,12 +27,12 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="computer-image" src="/images/computer.png" alt="">
+            <img class="computer-image" src="images/computer.png" alt="">
             <h3>Design and Development</h3>
             <p class="code-skill-description1">I started learning to code when i was 16 years old because i wanted to make my own websites. Overtime, i still doing coding and make some amazing websites and applications.</p>
           </div>
           <div class="skill-row">
-            <img class="program-image" src="/images/programming.png" alt="programming">
+            <img class="program-image" src="images/programming.png" alt="programming">
             <h3>Programmer</h3>
             <p class="code-skill-description2">I love programming. I know many programming language like python, Javascript and little morre of c,c++.</p>
           </div>
