--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>I'm Rajkumar</h1>
         <h2 class="title">a Web Developer</h2>  
         <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-        <img src="/images/mountain.png" alt="mountain-img">
+        <img src="images/mountain.png" alt="mountain-img">
 
     </div>
     <div class="middle-container">
